[gd_scene load_steps=5 format=3 uid="uid://dwoov5krbdh6v"]

[ext_resource type="Script" path="res://level/shop/sharik/sharik_trader.gd" id="1_cixy3"]
[ext_resource type="Texture2D" uid="uid://bynkssadvodan" path="res://level/shop/sharik/sharik-in-shop.png" id="2_hlon2"]
[ext_resource type="Texture2D" uid="uid://daf43wd8ivtgb" path="res://level/shop/sharik/sharik-in-shop-highlighted.png" id="3_a4a1m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6vxhi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hlon2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a4a1m")
}],
"loop": true,
"name": &"highlight",
"speed": 5.0
}]

[node name="SharikTrader" type="StaticBody2D"]
script = ExtResource("1_cixy3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6vxhi")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-5.33333, -112)
polygon = PackedVector2Array(-23.3333, 0.666679, -86, 0.666679, -184, 34.6667, -260, 82.6667, -316, 146.667, -350, 199.333, -370, 250.667, -380, 270.667, -372.667, 313.333, -349.333, 348.667, -314, 362, -265.333, 367.333, -230.667, 364, -174, 366.667, -125.333, 366.667, -95.3333, 358, -62.6667, 358, -31.3333, 360, 1.33333, 359.333, 37.3333, 352, 85.3333, 347.333, 136, 356.667, 184, 357.333, 187.333, 373.333, 205.333, 388.667, 234, 387.333, 272, 390.667, 302, 381.333, 306.667, 374.667, 330, 377.333, 358, 376.667, 376.667, 371.333, 380.667, 357.333, 384.667, 333.333, 374.667, 321.333, 359.333, 310.667, 363.333, 296, 372.667, 267.333, 374.667, 237.333, 359.333, 212, 350.667, 184, 354.667, 163.333, 354.667, 135.333, 356, 97.3334, 342, 65.3333, 326.667, 37.3333, 319.333, 3.33334, 319.333, -20.6667, 310.667, -48, 307.333, -64, 306.667, -102.667, 313.333, -134.667, 310.667, -159.333, 301.333, -170, 287.333, -166.667, 275.333, -156, 253.333, -135.333, 240, -127.333, 226, -122.667, 204.667, -121.333, 187.333, -118.667, 164, -118, 129.333, -114, 106.667, -111.333, 64.6667, -146.667, 40.6667, -155.333, 30.6667, -152, 28.6667, -131.333, 34.6667, -94, 45.3333, -65.3333, 44, -46, 36.6667, -18.6667, 34, -6.66666, 22.6667, 6.66668, 4, 5.33334, -16.6667, 0.666679)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
